Replaced Dx with \Delta x
Previous versions used both Dx and Delta x for the same thing -- the change in coordinates. Now I use just Delta x

--- a/source/tex/paper.sty
+++ b/source/tex/paper.sty
@@ -9,6 +9,7 @@
 \def\diag{\hbox{\rm diag}}
 %----------------------------------------------------------------------------------------
 \def\D{{\nabla}}
+\def\Dx{{\Delta}}
 %----------------------------------------------------------------------------------------
 \def\BarM{\overline{M}}
 %----------------------------------------------------------------------------------------
