Minor style changes.
Added a date to each pdf. Reinstated, in Section 7, the equations for the generalised connections in terms of the partial derivatives of the metric connection.

--- a/source/cadabra/dRabcd.tex
+++ b/source/cadabra/dRabcd.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt]{cdblatex}
-\usepackage{fancyhdr}
-\usepackage{footer}
+% \usepackage{fancyhdr}
+% \usepackage{footer}
 
 \begin{document}
 
