--- a/source/tex/bibdata.bib
+++ b/source/tex/bibdata.bib
@@ -15,7 +15,7 @@
 	Date-Added = {2019-09-22 22:02:49 +1000},
 	Date-Modified = {2019-09-22 22:02:49 +1000},
 	Keywords = {lcb},
-	Title = {{A tutorial on Cadabra}},
+	Title = {{Using Cadabra for tensor computations in General Relativity}},
 	Url = {https://github.com/leo-brewin/cadabra-tutorial},
 	Urldate = {2019}}
 
@@ -160,6 +160,5 @@
 	Keywords = {lcb, cadabra},
 	Pages = {489--498},
 	Title = {{A brief introduction to Cadabra: a tool for tensor computations in General Relativity}},
-	Url = {http://users.monash.edu.au/~leo/research/papers/files/lcb09-02.html},
 	Volume = {181},
 	Year = {2010}}
