--- a/source/cadabra/connection.tex
+++ b/source/cadabra/connection.tex
@@ -1,6 +1,7 @@
+\def\Date{19 Jan 2024}
+% \def\FileID{file:}
+
 \documentclass[12pt]{cdblatex}
-\usepackage{fancyhdr}
-\usepackage{footer}
 
 \begin{document}
 
