Correct syntax errors on ::LaTeXForm and ::Indices for Cadabra 2.5.2
Prior to version 2.5.2 Cadabra would allow LaTeXForm{"foo"} but since 2.5.2 must use round brackets. Also, since 2.5.2, cannot have whitespace between ::Indices and the round brackets, must use ::Indices(foo). Ditto for other properties (e.g., LaTeXForm("foo")). These were errors on my part that earlier versions of Cadabra let slip through. But 2.5.2 closes these loopholes.

--- a/source/cadabra/geodesic-bvp.tex
+++ b/source/cadabra/geodesic-bvp.tex
@@ -134,7 +134,7 @@ The generalised connections $\Gamma^{a}{}_{\ubk}$ are taken from the results of 
    {y44^{a},y54^{a}}::Weight(label=eps,value=4).
    {y55^{a}}::Weight(label=eps,value=5).
 
-   # Dx{#}::LaTeXForm{"{\Dx}"}.  # LCB: currently causes a bug, it kills ::KeepWeight for Dx
+   # Dx{#}::LaTeXForm("{\Dx}").  # LCB: currently causes a bug, it kills ::KeepWeight for Dx
 
    # note: keeping numbering as is (out of order) to ensure R appears before \nabla R etc.
    def product_sort (obj):
