--- a/source/cadabra/rnc2rnc.tex
+++ b/source/cadabra/rnc2rnc.tex
@@ -68,7 +68,7 @@ the $y^{a}$.
    R_{a b c d}::RiemannTensor.
    R^{a}_{b c d}::RiemannTensor.
 
-   # Dx{#}::LaTeXForm{"{\Dx}"}.  # LCB: currently causes a bug, it kills ::KeepWeight for Dx
+   # Dx{#}::LaTeXForm("{\Dx}").  # LCB: currently causes a bug, it kills ::KeepWeight for Dx
 
    import cdblib
 
