--- a/source/tex/paper.tex
+++ b/source/tex/paper.tex
@@ -58,7 +58,9 @@ Australia}
                           % all code will be available on github
        4-Nov-2022 (v3)\\  % corrected typos on lhs of eqtns 11.19a-d,
        1-Dec-2022 (v4)\\  % corrected typo on equation (3.2) in section (3.1)
-      21-Nov-2023 (v5)}   % reformatted Cadabra ouput to print \Delta x rather than Dx
+      21-Nov-2023 (v5)\\  % reformatted Cadabra ouput to print \Delta x rather than Dx
+      24-May-2024 (v6)}   % reinstated equations for generalised connection in section 7,
+                          % this matches section 7 of version 1
 \reference{Preprint: arXiv:0903.2087\\[5pt]
            Journal: {\it Class.Quantum.Grav.} {\bf 26} 175017 (2009)}
 
