--- a/source/cadabra/checks/check-bvp.tex
+++ b/source/cadabra/checks/check-bvp.tex
@@ -30,7 +30,7 @@ order terms unchanged. That is
    R_{a b c d}::Depends(\nabla{#}).
    R^{a}_{b c d}::Depends(\nabla{#}).
 
-   # Dx{#}::LaTeXForm{"{\Dx}"}.  # LCB: currently causes a bug, it kills ::KeepWeight for Dx
+   # Dx{#}::LaTeXForm("{\Dx}").  # LCB: currently causes a bug, it kills ::KeepWeight for Dx
 
 \end{cadabra}
 
