--- a/source/cadabra/geodesic-ivp.tex
+++ b/source/cadabra/geodesic-ivp.tex
@@ -1,4 +1,4 @@
-\def\Date{19 Jan 2024}
+\def\Date{30 Jul 2024}
 % \def\FileID{file:}
 
 \documentclass[12pt]{cdblatex}
@@ -70,6 +70,68 @@ We can then construct the Taylor series solution for $x^{a}(s)$
    sterm42 = flip_sign (cdblib.get ('genGamma22','genGamma.json'))
 
    sterm51 = flip_sign (cdblib.get ('genGamma31','genGamma.json'))
+
+   # note: the various ivp21, ivp31  etc. are the pieces of the Taylor series
+   #       for the ivp but *without* the leading 1/n! of the Taylor series
+
+   ivp21 := @(sterm21).                                          # cdb (ivp21.000,ivp21)
+
+   ivp31 := @(sterm21) + @(sterm22).                             # cdb (ivp31.000,ivp31)
+   ivp32 := @(sterm31).                                          # cdb (ivp32.000,ivp32)
+
+   ivp41 := @(sterm21) + @(sterm22) + @(sterm23).                # cdb (ivp41.000,ivp41)
+   ivp42 := @(sterm31) + @(sterm32).                             # cdb (ivp42.000,ivp42)
+   ivp43 := @(sterm41).                                          # cdb (ivp43.000,ivp43)
+
+   ivp51 := @(sterm21) + @(sterm22) + @(sterm23) + @(sterm24).   # cdb (ivp51.000,ivp51)
+   ivp52 := @(sterm31) + @(sterm32) + @(sterm33).                # cdb (ivp52.000,ivp52)
+   ivp53 := @(sterm41) + @(sterm42).                             # cdb (ivp53.000,ivp53)
+   ivp54 := @(sterm51).                                          # cdb (ivp54.000,ivp54)
+
+   factor_out (ivp21,$A^{a?}$)                                   # cdb (ivp21.001,ivp21)
+
+   factor_out (ivp31,$A^{a?}$)                                   # cdb (ivp31.001,ivp31)
+   factor_out (ivp32,$A^{a?}$)                                   # cdb (ivp32.001,ivp32)
+
+   factor_out (ivp41,$A^{a?}$)                                   # cdb (ivp41.001,ivp41)
+   factor_out (ivp42,$A^{a?}$)                                   # cdb (ivp42.001,ivp42)
+   factor_out (ivp43,$A^{a?}$)                                   # cdb (ivp43.001,ivp43)
+
+   factor_out (ivp51,$A^{a?}$)                                   # cdb (ivp51.001,ivp51)
+   factor_out (ivp52,$A^{a?}$)                                   # cdb (ivp52.001,ivp52)
+   factor_out (ivp53,$A^{a?}$)                                   # cdb (ivp53.001,ivp53)
+   factor_out (ivp54,$A^{a?}$)                                   # cdb (ivp54.001,ivp54)
+
+   v{#}::LaTeXForm("\dot{x}").
+
+   substitute (ivp21, $A^{a} -> v^{a}$)                          # cdb (ivp21.002,ivp21)
+
+   substitute (ivp31, $A^{a} -> v^{a}$)                          # cdb (ivp31.002,ivp31)
+   substitute (ivp32, $A^{a} -> v^{a}$)                          # cdb (ivp32.002,ivp32)
+
+   substitute (ivp41, $A^{a} -> v^{a}$)                          # cdb (ivp41.002,ivp41)
+   substitute (ivp42, $A^{a} -> v^{a}$)                          # cdb (ivp42.002,ivp42)
+   substitute (ivp43, $A^{a} -> v^{a}$)                          # cdb (ivp43.002,ivp43)
+
+   substitute (ivp51, $A^{a} -> v^{a}$)                          # cdb (ivp51.002,ivp51)
+   substitute (ivp52, $A^{a} -> v^{a}$)                          # cdb (ivp52.002,ivp52)
+   substitute (ivp53, $A^{a} -> v^{a}$)                          # cdb (ivp53.002,ivp53)
+   substitute (ivp54, $A^{a} -> v^{a}$)                          # cdb (ivp54.002,ivp54)
+
+   # build the Taylor series
+   # note the inclusion of the 1/n! factors
+
+   ivp2 := x^{a} + s v^{a} + (1/2) (s**2) @(ivp21).
+   ivp3 := x^{a} + s v^{a} + (1/2) (s**2) @(ivp31) + (1/6) (s**3) @(ivp32).
+   ivp4 := x^{a} + s v^{a} + (1/2) (s**2) @(ivp41) + (1/6) (s**3) @(ivp42) + (1/24) (s**4) @(ivp43).
+   ivp5 := x^{a} + s v^{a} + (1/2) (s**2) @(ivp51) + (1/6) (s**3) @(ivp52) + (1/24) (s**4) @(ivp53) + (1/120) (s**5) @(ivp54).
+
+   # cdb (ivp2.000,ivp2)
+   # cdb (ivp3.000,ivp3)
+   # cdb (ivp4.000,ivp4)
+   # cdb (ivp5.000,ivp5)
+
+   # now construct the scaled terms for ivp5
 
    sterm2 := @(sterm21) + @(sterm22) + @(sterm23) + @(sterm24).  # cdb (sterm2.000,sterm2)
    sterm3 := @(sterm31) + @(sterm32) + @(sterm33).               # cdb (sterm3.000,sterm3)
@@ -151,6 +213,27 @@ We can then construct the Taylor series solution for $x^{a}(s)$
    checkpoint.append (sterm3)
    checkpoint.append (sterm4)
    checkpoint.append (sterm5)
+
+   cdblib.create ('geodesic-ivp.json')
+
+   cdblib.put ('ivp21',ivp21,'geodesic-ivp.json')
+
+   cdblib.put ('ivp31',ivp31,'geodesic-ivp.json')
+   cdblib.put ('ivp32',ivp32,'geodesic-ivp.json')
+
+   cdblib.put ('ivp41',ivp41,'geodesic-ivp.json')
+   cdblib.put ('ivp42',ivp42,'geodesic-ivp.json')
+   cdblib.put ('ivp43',ivp43,'geodesic-ivp.json')
+
+   cdblib.put ('ivp51',ivp51,'geodesic-ivp.json')
+   cdblib.put ('ivp52',ivp52,'geodesic-ivp.json')
+   cdblib.put ('ivp53',ivp53,'geodesic-ivp.json')
+   cdblib.put ('ivp54',ivp54,'geodesic-ivp.json')
+
+   cdblib.put ('ivp2',ivp2,'geodesic-ivp.json')
+   cdblib.put ('ivp3',ivp3,'geodesic-ivp.json')
+   cdblib.put ('ivp4',ivp4,'geodesic-ivp.json')
+   cdblib.put ('ivp5',ivp5,'geodesic-ivp.json')
 \end{cadabra}
 
 % just to check that we are exporting the correct 4th order terms
@@ -162,6 +245,26 @@ We can then construct the Taylor series solution for $x^{a}(s)$
    \begin{dmath*} \cdb*{sterm3.short.scaled.002} \end{dmath*}
    \begin{dmath*} \cdb*{sterm2.short.scaled.003} \end{dmath*}
    \begin{dmath*} \cdb*{sterm3.short.scaled.003} \end{dmath*}
+\end{dgroup*}
+
+\begin{dgroup*}
+   \begin{dmath*} \cdb*{ivp21.002} \end{dmath*}
+   \begin{dmath*} \cdb*{ivp31.002} \end{dmath*}
+   \begin{dmath*} \cdb*{ivp32.002} \end{dmath*}
+   \begin{dmath*} \cdb*{ivp41.002} \end{dmath*}
+   \begin{dmath*} \cdb*{ivp42.002} \end{dmath*}
+   \begin{dmath*} \cdb*{ivp43.002} \end{dmath*}
+   \begin{dmath*} \cdb*{ivp51.002} \end{dmath*}
+   \begin{dmath*} \cdb*{ivp52.002} \end{dmath*}
+   \begin{dmath*} \cdb*{ivp53.002} \end{dmath*}
+   \begin{dmath*} \cdb*{ivp54.002} \end{dmath*}
+\end{dgroup*}
+
+\begin{dgroup*}
+   \begin{dmath*} \cdb*{ivp2.000} \end{dmath*}
+   \begin{dmath*} \cdb*{ivp3.000} \end{dmath*}
+   \begin{dmath*} \cdb*{ivp4.000} \end{dmath*}
+   % \begin{dmath*} \cdb*{ivp5.000} \end{dmath*}
 \end{dgroup*}
 
 % =================================================================================================
