--- a/source/cadabra/metric-inv.tex
+++ b/source/cadabra/metric-inv.tex
@@ -1,4 +1,4 @@
-\def\Date{19 Jan 2024}
+\def\Date{30 Jul 2024}
 % \def\FileID{file:}
 
 \documentclass[12pt]{cdblatex}
@@ -727,6 +727,18 @@ We also make the trivial change $A\rightarrow x$. Then we do some trivial reform
 
    metric4:=@(term0) + @(term1) + @(term2) + @(term3).  # cdb(metric4.501,metric4)
 
+   # these versions of "metric" are created just to add to the metric.json library
+   # note: term1 = 0, I could have used this fact above but ...
+
+   metric2:=@(term0) + @(term2).
+   metric3:=@(term0) + @(term2) + @(term3).
+   metric4:=@(term0) + @(term2) + @(term3) + @(term4).
+   metric5:=@(term0) + @(term2) + @(term3) + @(term4) + @(term5).
+
+   cdblib.put ('g^ab2',metric2,'metric-inv.json')
+   cdblib.put ('g^ab3',metric3,'metric-inv.json')
+   cdblib.put ('g^ab4',metric4,'metric-inv.json')
+   cdblib.put ('g^ab5',metric5,'metric-inv.json')
 \end{cadabra}
 
 \clearpage
