Removed dependancy on cadabra2python
I used cadabra2python as a backdoor way to import .cdb files.
This would create a .py file which would then be imported using
a standard Python import statement.

But Cadabra can now (since at least version 2.5.x) import .cdb files directly.
So I no longer need the backdoor hack.

--- a/source/cadabra/checks/check-bvp.tex
+++ b/source/cadabra/checks/check-bvp.tex
@@ -1,6 +1,7 @@
+\def\Date{18 May 2024}
+% \def\FileID{file:}
+
 \documentclass[12pt]{cdblatex}
-\usepackage{fancyhdr}
-\usepackage{footer}
 
 \begin{document}
 
