--- a/source/cadabra/collection.tex
+++ b/source/cadabra/collection.tex
@@ -1,7 +1,9 @@
+\def\Date{19 Jan 2024}
+% \def\FileID{file:}
+
 \documentclass[a4paper,12pt]{article}
 \usepackage[final]{pdfpages}
-\usepackage{fancyhdr}
-\usepackage{footer}
+\usepackage{collection}
 
 \begin{document}
 
