--- a/source/cadabra/detg2.tex
+++ b/source/cadabra/detg2.tex
@@ -165,7 +165,7 @@ following results against Calzetta do take note of this flipped sign in $R_{abcd
    substitute     (Ndetg,$\nabla_{a b}{R_{c d e f}} g^{c e}  -> \nabla_{a b}{R_{d f}}$,repeat=True)     # cdb (Ndetg.103,Ndetg)
    substitute     (Ndetg,$\nabla_{a b c}{R_{d e f g}} g^{d f}  -> \nabla_{a b c}{R_{e g}}$,repeat=True) # cdb (Ndetg.104,Ndetg)
 
-   # the following are based on sqrt-Ndetg.tex
+   # the following are based on sqrt-detg.tex
 
    sqrtNdetg := 1/2 + (1/2) @(Ndetg)
                - (1/8) (1/9) R_{a b} R_{c d} x^{a} x^{b} x^{c} x^{d}
