--- a/source/cadabra/checks/check-pGamma.tex
+++ b/source/cadabra/checks/check-pGamma.tex
@@ -1,6 +1,7 @@
+\def\Date{18 May 2024}
+% \def\FileID{file:}
+
 \documentclass[12pt]{cdblatex}
-\usepackage{fancyhdr}
-\usepackage{footer}
 
 \begin{document}
 
